<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProjectLab</string>
    <string name="text">PROJECT
LAB</string>
    <string name="con_pulse__active">CON_PULSE: ACTIVE</string>
    <string name="label___authentication_require">AUTHENTICATION REQUIRED</string>
    <string name="temukan_tim__wujudkan_ide_">Temukan tim. Wujudkan ide.</string>
    <string name="projectlab">PROJECTLAB</string>
    <string name="projectnlab">PROJECT\nLAB</string>
    <string name="pl">PL</string>
    <string name="masuk_dengan_google">MASUK DENGAN GOOGLE</string>
    <string name="masuk_dengan_github">MASUK DENGAN GITHUB</string>
    <string name="dengan_masuk_kamu_setuju_denga">Dengan masuk, kamu setuju dengan syarat layanan ProjectLab.</string>
    <string name="project_lab_core_infrastructur">Copyright © 2026 ProjectLab</string>
    <string name="kamu_ini_siapa">KAMU INI SIAPA?</string>
    <string name="str_1_2">1 / 2</string>
    <string name="isi_sekali_dipakai_selamanya">Isi sekali. Dipakai selamanya.</string>
    <string name="role_utamamu">ROLE UTAMAMU</string>
    <string name="developer">DEVELOPER</string>
    <string name="desainer">DESAINER</string>
    <string name="writer">WRITER</string>
    <string name="marketer">MARKETER</string>
    <string name="videografer">VIDEOGRAFER</string>
    <string name="lainnya">LAINNYA</string>
    <string name="informasi_kontak">INFORMASI KONTAK</string>
    <string name="username_kamu">USERNAME KAMU</string>
    <string name="email_kamu">EMAIL KAMU</string>
    <string name="discord_kamu">DISCORD KAMU</string>
    <string name="nomor_wa_kamu">NOMOR WA KAMU</string>
    <string name="lanjut">LANJUT</string>
    <string name="kategori">[KATEGORI]</string>
    <string name="berbayar">BERBAYAR</string>
    <string name="judul_proyek">JUDUL PROYEK</string>
    <string name="deskripsi_singkat_proyek_akan">Deskripsi singkat proyek akan muncul di sini.</string>
    <string name="str_0_pelamar">0 PELAMAR</string>
    <string name="lihat">LIHAT</string>
    <string name="detail_projek">DETAIL PROJEK</string>
    <string name="sukarela">SUKARELA</string>
    <string name="crypto_analytics_dashboard_20">CRYPTO ANALYTICS DASHBOARD 2.0</string>
    <string name="oleh_aditya_perkasa">Oleh: Aditya Perkasa</string>
    <string name="tentang_projek">TENTANG PROJEK</string>
    <string name="kami_sedang_membangun_iterasi">Kami sedang membangun iterasi kedua dari Crypto Analytics Dashboard yang berfokus pada kecepatan eksekusi data on-chain. Projek ini menggunakan stack modern dengan Next.js dan Rust untuk backend pemrosesan data. Kami mencari talenta yang tidak takut dengan kompleksitas data tinggi dan siap bekerja dalam sprint mingguan yang intens.</string>
    <string name="role_yang_dibuka">ROLE YANG DIBUKA</string>
    <string name="lamar_sekarang">LAMAR SEKARANG</string>
    <string name="lamar_projek">LAMAR PROJEK</string>
    <string name="role_yang_kamu_lamar">ROLE YANG KAMU LAMAR</string>
    <string name="pilih_portofolio">PILIH PORTOFOLIO</string>
    <string name="pilih_link_yang_ingin_kamu_ser">Pilih link yang ingin kamu sertakan dalam lamaran ini.</string>
    <string name="kamu_melamar_sebagai_di_pastik">Kamu melamar sebagai... di... Pastikan link portofolio kamu dapat diakses oleh publik.</string>
    <string name="pesan_tambahan_optional">PESAN TAMBAHAN (OPTIONAL)</string>
    <string name="ceritakan_kenapa_kamu_tertarik">Ceritakan kenapa kamu tertarik...</string>
    <string name="kirim_lamaran">KIRIM LAMARAN</string>
    <string name="projek">PROJEK</string>
    <string name="motion_graphicncommercial">MOTION GRAPHIC\nCOMMERCIAL</string>
    <string name="tutup">tutup</string>
    <string name="pelamar">PELAMAR</string>
    <string name="str_24">24</string>
    <string name="progres_tim">PROGRES TIM</string>
    <string name="str_3">3</string>
    <string name="str_3_1">/ 3</string>
    <string name="kelola_projek">KELOLA PROJEK</string>
    <string name="edit_projek">EDIT PROJEK</string>
    <string name="ui_redesign_fornecommerce">UI REDESIGN FOR\nE-COMMERCE</string>
    <string name="buka">Buka</string>
    <string name="str_2">2</string>
    <string name="str_5">/ 5</string>
    <string name="semua">SEMUA</string>
    <string name="bagi_hasil">BAGI HASIL</string>
    <string name="text_1">+</string>
    <string name="buat_projek">BUAT PROJEK</string>
    <string name="nama_projek">NAMA PROJEK</string>
    <string name="nama_projek_kamu">NAMA PROJEK KAMU</string>
    <string name="banner_projek">BANNER PROJEK</string>
    <string name="pilih_gambar">PILIH GAMBAR</string>
    <string name="rekomendasi_ukuran_1200x630px">REKOMENDASI UKURAN MAX 2MB</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="jelaskan_detail_projek_kamu">JELASKAN DETAIL PROJEK KAMU</string>
    <string name="tipe_kompensasi">TIPE KOMPENSASI</string>
    <string name="sukarela_1">SUKARELA</string>
    <string name="bagi_hasil_1">BAGI HASIL</string>
    <string name="berbayar_1">BERBAYAR</string>
    <string name="role_yang_dibutuhkan">ROLE YANG DIBUTUHKAN</string>
    <string name="posisi_eg_designer">Posisi (e.g. Designer)</string>
    <string name="slot">Slot</string>
    <string name="posting_projek">POSTING PROJEK</string>
    <string name="x">X</string>
    <string name="tunjukkan_karyamu">TUNJUKKAN KARYAMU</string>
    <string name="str_2_2">2 / 2</string>
    <string name="link_ini_jadi_senjata_utamamu">Link ini jadi senjata utamamu saat melamar.</string>
    <string name="portofolio">PORTOFOLIO</string>
    <string name="httpsbehancenetusername">https://behance.net/username</string>
    <string name="tambah_link_lainnya">+ TAMBAH LINK LAINNYA</string>
    <string name="kamu_bisa_update_link_ini_kapa">Kamu bisa update link ini kapan saja lewat profil.</string>
    <string name="mulai_jelajahi">MULAI JELAJAHI</string>
    <string name="lewati_dulu">LEWATI DULU</string>
    <string name="judul_projek">JUDUL PROJEK</string>
    <string name="str_0">0</string>
    <string name="str_0_1">/ 0</string>
    <string name="edit_projek_1">EDIT PROJEK</string>
    <string name="posting_perubahan">POSTING PERUBAHAN</string>
    <string name="memuat_data_projek">Memuat data projek...</string>
    <string name="kelola_projek_1">KELOLA PROJEK</string>
    <string name="ui_redesign_for_ecommerce">UI REDESIGN FOR E-COMMERCE</string>
    <string name="status_projek">STATUS PROJEK</string>
    <string name="buka_projek">BUKA PROJEK</string>
    <string name="tutup_projek">TUTUP PROJEK</string>
    <string name="total_pelamar">TOTAL PELAMAR</string>
    <string name="str_25">2/5</string>
    <string name="daftar_pelamar">DAFTAR PELAMAR</string>
    <string name="tim_saat_ini">TIM SAAT INI</string>
    <string name="slot_25_terisi">SLOT: 2/5 TERISI</string>
    <string name="alex_choi">ALEX CHOI</string>
    <string name="uiux_designer">UI/UX DESIGNER</string>
    <string name="terima">TERIMA</string>
    <string name="jordan_lee">JORDAN LEE</string>
    <string name="pm">PM</string>
    <string name="kosong">KOSONG</string>
    <string name="frontend_dev">FRONT-END DEV</string>
    <string name="terima_pelamar">TERIMA PELAMAR?</string>
    <string name="kontak_kamu_akan_dikirim_ke_pe">Kontak kamu akan dikirim ke pelamar secara otomatis untuk koordinasi lanjut.</string>
    <string name="ya_terima">YA, TERIMA  →</string>
    <string name="batalkan">BATALKAN</string>
    <string name="role_name">ROLE NAME</string>
    <string name="str_0_slot_tersisa">0 SLOT TERSISA</string>
    <string name="cari_proyek">CARI PROJEK</string>
    <string name="masukkan_kata_kunci">MASUKKAN KATA KUNCI</string>
    <string name="kata_kunci">Kata Kunci....</string>
    <string name="filter_role">FILTER ROLE</string>
    <string name="pilih_semua">PILIH SEMUA</string>
    <string name="designer">DESIGNER</string>
    <string name="tipe_proyek">TIPE PROYEK</string>
    <string name="pencarian_terakhir">PENCARIAN TERAKHIR</string>
    <string name="hapus_semua">HAPUS SEMUA</string>
    <string name="hasil_pencarian">HASIL PENCARIAN</string>
    <string name="recent_query">Recent Query</string>
    <string name="loading">LOADING...</string>
    <string name="emailexamplecom">email@example.com</string>
    <string name="proyek">PROYEK</string>
    <string name="lamaran">LAMARAN</string>
    <string name="belum_ada_portofolio">Belum ada portofolio</string>
    <string name="kontak">KONTAK</string>
    <string name="whatsapp">WHATSAPP</string>
    <string name="belum_diatur">Belum diatur</string>
    <string name="discord">DISCORD</string>
    <string name="email">EMAIL</string>
    <string name="edit_profil">EDIT PROFIL</string>
    <string name="logout">LOGOUT</string>
    <string name="diterima">DITERIMA</string>
    <string name="menunggu">MENUNGGU</string>
    <string name="ditolak">DITOLAK</string>
    <string name="neobanking_app">NEO-BANKING APP</string>
    <string name="role">ROLE</string>
    <string name="str_12_jan_2024">12 JAN 2024</string>
    <string name="lihat_detail">LIHAT DETAIL</string>
    <string name="sitidevprojectlabcom">siti.dev@projectlab.com</string>
    <string name="str_62_812_3456_789">+62 812 3456 789</string>
    <string name="detail_lamaran">DETAIL LAMARAN</string>
    <string name="tanggal">TANGGAL</string>
    <string name="portofolio_yang_disertakan">PORTOFOLIO YANG DISERTAKAN</string>
    <string name="pesan_tambahan">PESAN TAMBAHAN</string>
    <string name="saya_sangat_tertarik_dengan_pr">Saya sangat tertarik dengan proyek ini...</string>
    <string name="batalkan_lamaran">BATALKAN LAMARAN</string>
    <string name="tentang_aplikasi">TENTANG APLIKASI</string>
    <string name="content_tentang_aplikasi">Platform kolaborasi kreator digital untuk membentuk tim impian dan mengubah ide kreatif menjadi projek nyata.</string>
</resources>