<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_brutalist_white_card"
    android:padding="16dp"
    android:layout_marginBottom="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/project_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kategori"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/space_grotesk_bold" />

        <TextView
            android:id="@+id/project_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/black"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:paddingBottom="2dp"
            android:text="@string/berbayar"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:fontFamily="@font/space_grotesk_regular"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/project_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/judul_proyek"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/space_grotesk_bold" />

    <TextView
        android:id="@+id/project_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/deskripsi_singkat_proyek_akan"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/space_grotesk_regular" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@drawable/dash_line"
        android:layerType="software"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/project_applicants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_0_pelamar"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/space_grotesk_bold" />

        <TextView
            android:id="@+id/btn_lihat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/lihat"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/space_grotesk_bold" />
    </RelativeLayout>
</LinearLayout>
